--- a/webbanhang/main.css
+++ b/webbanhang/main.css
@@ -12,7 +12,7 @@
     --orange: #fcc927;
 }
 body{
-    overflow-x: hidden;
+    
 }
 a{
     text-decoration: none;
@@ -31,7 +31,7 @@ ul{
     height: 15px;
     line-height: 15px;
     text-align: center;
-    padding: 0.1rem;
+ 
     right: 49.75px;
 }
 .sup2{
@@ -46,7 +46,7 @@ ul{
     height: 15px;
     line-height: 15px;
     text-align: center;
-    padding: 0.1rem;
+  
 }
 .btn{
     padding: .8rem 2.5em;
@@ -95,13 +95,6 @@ ul{
     margin-top: -3.5rem;
     margin-bottom: 7rem;
 }
-/* khoan cach tren header  */
-.line5{
-    height: 70px;
-    width: 100%;
-    background-color: rgb(114, 88, 211);
-}
-/* end khoan cach */
 .message{
     text-align: center;
     text-transform: capitalize;
@@ -797,17 +790,15 @@ header .user-box{
     margin-bottom: 2rem;
 }
 .popular-brands-content-shop{
-    grid-template-columns: repeat(auto-fit,minmax(20rem,4fr));
-    display: grid;
-    width: 100%;
-    height: auto;
+    grid-template-columns: repeat(auto-fit,minmax(20rem,1fr));
+  display: grid;
+   
   
 }
 .popular-brands-content-shop .card-shop{
     flex: auto; 
     width: 100%;
     margin: 1rem;
-    
 }
 .popular-brands-content-shop img{
     width: 100%;
@@ -815,7 +806,7 @@ header .user-box{
     transform: 2s;
 }
 .popular-brands-content-shop .card-shop
-{  
+{
     background: #fff;
     box-shadow: var(--box-shadow2);
     padding: 2rem;
@@ -1439,7 +1430,6 @@ z-index: 100;
 
 }
 
-
 .title_trust{
     background: #FFB76B;
     background: linear-gradient(to right, #FFB76B 0%, #FFA73D 30%, #FF7C00 60%, #FF7F04 100%);
@@ -1583,9 +1573,14 @@ z-index: 100;
     align-items: center;
   }
   .title_selling{
-    font-family: 'Open Sans', sans-serif;
-    margin-bottom: 10px;
-    padding-top: 40px;
+    margin-left: 210px;
+  }
+  .title_seeall{
+    cursor: pointer;
+    font-weight: 500;
+    font-size: 15px;
+    text-align: center;
+    margin-bottom: 140px;
   }
  .card .fav{
     background: white;
@@ -1613,7 +1608,6 @@ z-index: 100;
 
 
   .buttonn {
-    width: auto;
     --background: #362A89;
     --text: #fff;
     --cart: #fff;
@@ -1861,7 +1855,120 @@ z-index: 100;
   /* Add to cart */
  
 /* SP bán chạy */
-/* image logo menu */
+
+
+/* Loại sản phẩm */
+.container{
+    margin-bottom: 1000px;
+    width:100%;
+    background-color: white;
+    padding: 30px;
+    border-radius: 20px;
+}
+.tab_box{
+    position: relative;
+    width: 100%;
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border-bottom: 2px solid rgba(229,229,229);
+}
+.tab_box .tab_btn{
+    font-size: 18px;
+    font-weight: 600;
+    color: #919191;
+    background:none;
+    border: none;
+    padding: 18px;
+    cursor: pointer;
+}
+.tab_box .tab_btn.active_product{
+    color: #7360ff;
+}
+.content_box{
+    padding: 20px;
+}
+.content_box .content{
+    display: none;
+
+}
+@keyframes moving{
+    from{transform: translate(50px); opacity: 0;}
+    to{transform: translate(0px); opacity: 1;}
+}
+.content_box .content.active_product{
+    display: flex;
+    justify-content: center;
+}
+
+.linee{
+    position: absolute;
+    top: 61px;
+    left: 135px;
+    width: 90px;
+    height: 5px;
+    background-color:#7360ff ;
+    border-radius: 10px;
+    transition: .3s ease-in-out;
+}
+.content{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    column-gap: 10px;
+}
+.content li{
+    list-style: none;
+    position: relative;
+    scroll-snap-align: start;
+    height: 250px;
+    list-style: none;
+    background: #fff;
+    cursor: pointer;
+    padding-bottom: 15px;
+    flex-direction: column;
+    border-radius: 8px;
+    /* Bỏ thuộc tính display: inline-block; và sử dụng display: inline-flex; thay thế */
+    text-align: center
+}
+
+.content li h2{
+    font-family: 'Open Sans', sans-serif;
+    margin-top: 10px;
+    margin-right: 10px;
+    margin-left: 10px;
+    font-weight: 500;
+    font-size: 1.2rem;
+    padding-bottom: 10px;
+    margin-bottom: 0px;
+    /* Đặt chiều rộng cố định cho tiêu đề */
+    width: 250px;
+    overflow: hidden; /* Ngăn chặn nội dung bị tràn ra ngoài thẻ */
+    text-overflow: ellipsis; /* Hiển thị dấu chấm 3 chấm khi tiêu đề bị cắt ngắn */
+    white-space: nowrap; 
+}
+.card .img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.title_selling{
+    font-family: 'Open Sans', sans-serif;
+}
+.title_seeall{
+    font-family: 'Open Sans', sans-serif;
+}
+span{
+    font-family: 'Open Sans', sans-serif;
+}
+sup{
+    font-family: 'Open Sans', sans-serif;
+}
+p{
+    font-family: 'Open Sans', sans-serif;
+}
+
+/* Loại sản phẩm */
 /* ngo thanh canh */
 /* main shop */
 .main-shop{
@@ -1874,12 +1981,12 @@ z-index: 100;
     margin: 0;
 }
 .menu-left{
-    width: 330px;
+    width: 20%;
     position: sticky; /* Thêm position: sticky */
     left: 5px;
     top: 75px; /* Đặt vị trí cố định ở trên cùng */
     height: 50vh; /* Chiều cao tối đa để menu-left không bị tràn ra ngoài */
-    overflow-y: auto; /* Kích hoạt thanh cuộn nếu menu dài hơn chiều cao của vùng hiển thị */
+    
 }
 /* menu-left */
 .main-shop .menu-left .title-menu{
@@ -1926,7 +2033,7 @@ z-index: 100;
     background-color: burlywood;
 }
 
-.main-shop .product-right .content .hotline {
+.main-shop .product-right .contentt .hotline {
     position: absolute;
     top: 61;
     right: 0;
@@ -1934,44 +2041,44 @@ z-index: 100;
     display: flex;
   }
   
-.main-shop .product-right .content{
+.main-shop .product-right .contentt{
     width: 100%;
     height: 327px;
 }
-.main-shop .product-right .content .hotline .phone {
+.main-shop .product-right .contentt .hotline .phone {
     margin-left: 12px;
     margin-top: 10px; 
   }
   
-  .main-shop .product-right .content .hotline .phone h1 {
+  .main-shop .product-right .contentt .hotline .phone h1 {
     margin: 0;
   }
-  .main-shop .product-right .content .hotline .phone p {
+  .main-shop .product-right .contentt .hotline .phone p {
     margin: 0;
   }
-  .main-shop .product-right .content .content-shop{
+  .main-shop .product-right .contentt .content-shop{
     width: 100%;
     height: 257px;
     padding: 111px 0px;
     margin-bottom: 20px;
-    margin-top:64px;
+    margin-top:130px;
     /* background-image: url('image/R.png');
     background-size: 100% 100%; 
     background-position: center;  */
     background-color: #5cb8c9;
 }
-.main-shop .product-right .content .contaner{
+.main-shop .product-right .contentt .contaner-shop{
     text-align: center;
 }
-.main-shop .product-right .content .contaner .title-bread{
+.main-shop .product-right .contentt .contaner-shop .title-bread{
     font-size: 30px;
 }
-.main-shop .product-right .content .contaner .breadcrumd{
+.main-shop .product-right .contentt .contaner-shop .breadcrumd{
     display: flex; /* Display items horizontally */
     justify-content: center; /* Center horizontally */
     align-items: center; /* Center vertically */   
 }
-.main-shop .product-right .content .contaner .breadcrumd li {
+.main-shop .product-right .contentt .contaner-shop .breadcrumd li {
     margin: 0 0px; /* Adjust the value as needed */
   }
 /* end main shop */
