--- a/webbanhang/main.css
+++ b/webbanhang/main.css
@@ -1862,7 +1862,7 @@ z-index: 100;
     margin-bottom: 1000px;
     width:100%;
     background-color: white;
-    padding: 30px;
+    padding: 0;
     border-radius: 20px;
 }
 .tab_box{
