--- a/webbanhang/style.css
+++ b/webbanhang/style.css
@@ -6,6 +6,7 @@
     box-sizing: border-box;
      font-family: 'Poppins', sans-serif;
 }
+
 :root{
     --box-shadow:0px 0px 0px 6px rgb(255 255 255/40%);
     --orange: #fcc927;
@@ -185,7 +186,7 @@ z-index: 100;
     content: '';
     bottom: -18%;
     right: 0;
-    background-image: url('img/14.png');
+    background-image: url('');
     width: 316px;
     height: 245px;
     background-size: 316px;
@@ -299,7 +300,7 @@ header .user-box{
     content: '';
     bottom: -25%;
     left: -10px;
-    background-image: url('img/10.png');
+    background-image: url('');
     width: 225px;
     height: 220px;
     background-size: 225px;
@@ -326,6 +327,7 @@ header .user-box{
     font-size: 2rem;
 }
 .dashboard p{
+    text-align: center;
     font-size: 20px;
     text-transform: capitalize;
     margin: .5rem 0;
